# Bicycle is a database database framework.

# Copyright (C) 2024 Ordinary Labs

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "bicycle"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true
description = "Builder tool for the Bicycle project"
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme = "README.md"
include = ["/cli"]

# !! comment out when publishing
build = "cli/build.rs"

[lib]
name = "bicycle"
path = "cli/src/lib.rs"

[[bin]]
name = "bicycle"
path = "cli/src/main.rs"

[dependencies]
heck = "0.4.1"
toml = "0.8.10"

lazy_static = { workspace = true }

prost = { workspace = true }
prost-types = { workspace = true }
tonic-build = { workspace = true }

[workspace]
members = ["core", "server"]

[workspace.package]
authors = ["sean watters <sean@ordinarylabs.io>"]
edition = "2021"
homepage = "https://ordinarylabs.io"
repository = "https://github.com/ordinarylabs/bicycle"
license = "AGPL-3.0-only"
categories = ["database"]
version = "0.1.7"

[workspace.dependencies]
lazy_static = "1.4.0"

prost = "0.12.3"
prost-types = "0.12.3"

tonic = "0.10.2"
tonic-build = "0.10.2"
tonic-reflection = "0.10.2"

rocksdb = "0.21.0"

tokio-stream = "0.1.14"
tokio = "1.36.0"

bicycle_core = { path = "./core", version = "0.1.7" }
bicycle_server = { path = "./server", version = "0.1.7" }
