# Bicycle is a database database framework.

# Copyright (C) 2024 Ordinary Labs

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "bicycle_core"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true
description = "Protobuf definitions and RocksDB wrapper for the Bicycle project"
repository.workspace = true
homepage.workspace = true
categories.workspace = true

[dependencies]
lazy_static = { workspace = true }

tonic = { workspace = true }
prost = { workspace = true }
rocksdb = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
