# Bicycle is a database database framework.

# Copyright (C) 2024 Ordinary Labs

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[workspace]
# NOT PART OF THE WORKSPACE

[package]
name = "bicycle_plugin"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["sean watters <sean@ordinarylabs.io>"]
description = "Plugin example for the Bicycle project"
repository = "https://github.com/ordinarylabs/bicycle"
homepage = "https://ordinarylabs.io"
categories = ["database"]

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"

[build-dependencies]
tonic-build = "0.9.2"
