# Bicycle is a database, used for things databases are used for.

# Copyright (C) 2023  sean watters

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
[package]
name = "bicycle_server"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0"
authors = ["sean watters sean@watters.io"]
description = "gRPC database server for the Bicycle project"
repository = "https://github.com/ordinarylabs/bicycle"
homepage = "https://github.com/ordinarylabs"

[dependencies]
bicycle_core = { workspace = true }

prost = { workspace = true }

tonic = { workspace = true }
tonic-reflection = { workspace = true }

lazy_static = { workspace = true }

tokio-stream = { workspace = true }
tokio = { workspace = true, features = ["parking_lot", "rt-multi-thread", "macros", "sync", "time"] }

jemallocator = "0.5.0"
parking_lot = "0.12.1"
chrono = "0.4.33"

serde = { version = "1.0", features = ["derive"] }
