# Bicycle is a database database framework.

# Copyright (C) 2024  Ordinary Labs, LLC

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
[package]
name = "bicycle_server"
version = "0.1.4"
edition = "2021"
license.workspace = true
authors.workspace = true
description = "gRPC database server for the Bicycle project"
repository.workspace = true
homepage.workspace = true
categories.workspace = true

[dependencies]
bicycle_core = { workspace = true }

prost = { workspace = true }

tonic = { workspace = true }
tonic-reflection = { workspace = true }

lazy_static = { workspace = true }

tokio-stream = { workspace = true }
tokio = { workspace = true, features = ["parking_lot", "rt-multi-thread", "macros", "sync", "time"] }

jemallocator = "0.5.0"
parking_lot = "0.12.1"

serde = { version = "1.0", features = ["derive"] }
