# Bicycle is a protobuf defined database framework.

# Copyright (C) 2024 Ordinary Labs

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
[package]
name = "bicycle_server"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true
description = "gRPC database server for the Bicycle framework"
repository.workspace = true
homepage.workspace = true
categories.workspace = true

[dependencies]
bicycle_core = { workspace = true }
bicycle_proto = { workspace = true }

parking_lot = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

tonic = { workspace = true }
tonic-reflection = { workspace = true }

lazy_static = { workspace = true }

tokio-stream = { workspace = true }
tokio = { workspace = true }

env_logger = { workspace = true }
log = { workspace = true }

jemallocator = "0.5.0"

[build-dependencies]
tonic-build = { workspace = true }
