# Bicycle is a framework for managing data.

# Copyright (C) 2024 Ordinary Labs

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "bicycle_sproc"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true
description = "WebAssembly SPROC runtime for the Bicycle framework"
repository.workspace = true
homepage.workspace = true
categories = []

[dependencies]
wasmtime = "18.0.2"

bicycle_core = { workspace = true }

tonic = { workspace = true } 
tonic-reflection = { workspace = true }

prost = { workspace = true }
prost-types = { workspace = true }

tokio-stream = { workspace = true }
tokio = { workspace = true, features = ["parking_lot", "rt-multi-thread", "macros", "sync", "time"] }
wasi-common = "18.0.2"
parking_lot = "0.12.1"

[build-dependencies]
tonic-build = { workspace = true }
