# BicycleDB is a protobuf-defined database management system.

# Copyright (C) 2024 Ordinary Labs

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "bicycle_sqlite"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true
description = "SQLite database engine for the Bicycle framework"
repository.workspace = true
homepage.workspace = true
categories = ["database"]

[dependencies]
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.24.0", features = ["bundled"] }

lazy_static = { workspace = true }
prost = { workspace = true }
log = { workspace = true }
